# tauri-unison-demo

./: .gitignore  README.md
src/: error.html  index.html  main.js  splashscreen.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/build_script_templates/: compile_main.md  fetch_base.md
src-tauri/build_scripts/: compile_main.md  compile_main.output.md  fetch_base.md  fetch_base.output.md
src-tauri/src/: main.rs
