[package]
name = "tauri-unison-demo"
version = "0.0.0"
description = "Tauri-Unison demo"
authors = ["Jemma Nelson"]
license = "CC0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-all", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#tauri-plugin-websocket = "2.0.0-alpha.6"
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = "0.11.23"
tokio = "1.35.1"
url = "2.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
