[package]
name = "tauri-unison-demo"
version = "0.0.0"
description = "Tauri-Unison demo"
authors = ["Jemma Nelson"]
license = "CC0"
repository = "https://github.com/fwip/tauri-unison-demo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = {version = "0.11.23", features = ["blocking"] }
serde = "1.0"
tauri-build = { version = "1.5", features = [] }
tinytemplate = "1.2.1"
toml = "0.8.8"
tokio = "1.35.1"

[target.'cfg(windows)'.build-dependencies]
zip = "0.6.6"

[target.'cfg(target_os = "macos")'.build-dependencies]
tar = "0.4.40"
flate2 = "1.0.28"

[target."cfg(unix)".dependencies]
tar = "0.4.40"
flate2 = "1.0.28"


[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-all", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#tauri-plugin-websocket = "2.0.0-alpha.6"
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = "0.11.23"
tokio = "1.35.1"
url = "2.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[package.metadata.unison_tauri]
# The version of ucm to pull
ucm_version = "release/0.5.14"
# The project to clone from Unison share
project = "@dfreeman/tvGuide"
branch = "main"
# The route that serves your requests
entrypoint = "wordle.serve"
# Correctly specifying your dependencies here will improve build times in CI
# and reduce traffic to Unison share.
dependencies_cache = ["@unison/base/releases/2.12.0", "@dfreeman/tv/releases/0.1.1"]
